tests/titback/exec_failure_stderr.txt
  File "<string>", line 1
    invalid Python code
            ^^^^^^
SyntaxError: invalid syntax
